@@ -92,18 +92,18 @@ argument_list|>
 block|{
 name|DbEntityCellMetadata
 parameter_list|(
-name|GraphBuilder
+name|DbGraphBuilder
 name|builder
 parameter_list|,
-name|String
-name|entityName
+name|DbEntity
+name|entity
 parameter_list|)
 block|{
 name|super
 argument_list|(
 name|builder
 argument_list|,
-name|entityName
+name|entity
 argument_list|)
 expr_stmt|;
 block|}
@@ -128,25 +128,25 @@ name|getDataMaps
 argument_list|()
 control|)
 block|{
-if|if
-condition|(
+name|DbEntity
+name|dbEntity
+init|=
 name|dm
 operator|.
 name|getDbEntity
 argument_list|(
 name|entityName
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|dbEntity
 operator|!=
 literal|null
 condition|)
 block|{
 return|return
-name|dm
-operator|.
-name|getDbEntity
-argument_list|(
-name|entityName
-argument_list|)
+name|dbEntity
 return|;
 block|}
 block|}
