@@ -377,9 +377,6 @@ argument_list|(
 name|this
 argument_list|,
 name|e
-operator|.
-name|getName
-argument_list|()
 argument_list|)
 return|;
 block|}
