@@ -29,6 +29,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -114,6 +124,7 @@ parameter_list|>
 implements|implements
 name|Serializable
 block|{
+specifier|final
 name|GraphBuilder
 argument_list|<
 name|E
@@ -124,16 +135,14 @@ name|R
 argument_list|>
 name|builder
 decl_stmt|;
+specifier|final
 name|String
 name|entityName
 decl_stmt|;
+specifier|final
 name|String
 name|label
 decl_stmt|;
-name|EntityCellMetadata
-parameter_list|()
-block|{
-block|}
 name|EntityCellMetadata
 parameter_list|(
 name|GraphBuilder
@@ -146,24 +155,50 @@ name|R
 argument_list|>
 name|builder
 parameter_list|,
-name|String
-name|entityName
+name|Entity
+argument_list|<
+name|E
+argument_list|,
+name|A
+argument_list|,
+name|R
+argument_list|>
+name|entity
 parameter_list|)
 block|{
 name|this
 operator|.
 name|builder
 operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
 name|builder
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
 name|entityName
 operator|=
-name|entityName
-expr_stmt|;
-name|rebuildLabel
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|entity
+argument_list|)
+operator|.
+name|getName
 argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|label
+operator|=
+name|createLabel
+argument_list|(
+name|entity
+argument_list|)
 expr_stmt|;
 block|}
 comment|/**      * Resolves entity      */
@@ -180,33 +215,11 @@ argument_list|>
 name|fetchEntity
 parameter_list|()
 function_decl|;
-specifier|final
-name|void
-name|rebuildLabel
-parameter_list|()
-block|{
-name|label
-operator|=
-name|createLabel
-argument_list|()
-expr_stmt|;
-block|}
 specifier|public
 name|String
 name|toString
 parameter_list|()
 block|{
-if|if
-condition|(
-name|label
-operator|==
-literal|null
-condition|)
-block|{
-name|rebuildLabel
-argument_list|()
-expr_stmt|;
-block|}
 return|return
 name|label
 return|;
@@ -214,8 +227,7 @@ block|}
 comment|/**      * Creates label for this cell      */
 name|String
 name|createLabel
-parameter_list|()
-block|{
+parameter_list|(
 name|Entity
 argument_list|<
 name|E
@@ -225,10 +237,8 @@ argument_list|,
 name|R
 argument_list|>
 name|entity
-init|=
-name|fetchEntity
-argument_list|()
-decl_stmt|;
+parameter_list|)
+block|{
 name|StringBuilder
 name|label
 init|=
@@ -331,6 +341,11 @@ block|}
 block|}
 return|return
 name|label
+operator|.
+name|append
+argument_list|(
+literal|"</html>"
+argument_list|)
 operator|.
 name|toString
 argument_list|()
