@@ -92,25 +92,18 @@ argument_list|>
 block|{
 name|ObjEntityCellMetadata
 parameter_list|(
-name|GraphBuilder
-argument_list|<
-name|ObjEntity
-argument_list|,
-name|ObjAttribute
-argument_list|,
-name|ObjRelationship
-argument_list|>
+name|ObjGraphBuilder
 name|builder
 parameter_list|,
-name|String
-name|entityName
+name|ObjEntity
+name|entity
 parameter_list|)
 block|{
 name|super
 argument_list|(
 name|builder
 argument_list|,
-name|entityName
+name|entity
 argument_list|)
 expr_stmt|;
 block|}
@@ -135,25 +128,25 @@ name|getDataMaps
 argument_list|()
 control|)
 block|{
-if|if
-condition|(
+name|ObjEntity
+name|objEntity
+init|=
 name|dm
 operator|.
 name|getObjEntity
 argument_list|(
 name|entityName
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|objEntity
 operator|!=
 literal|null
 condition|)
 block|{
 return|return
-name|dm
-operator|.
-name|getObjEntity
-argument_list|(
-name|entityName
-argument_list|)
+name|objEntity
 return|;
 block|}
 block|}
